--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mysql": "^2.15.0",
-    "sequelize": "^4.36.1"
+    "sequelize": "^4.36.1",
+    "socket.io": "^2.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.2"
   }
 }
